@@ -1,0 +1,29 @@
+/* XPM */
+static char * status_game_xpm[] = {
+"12 12 14 1",
+" 	c None",
+".	c #FFFFFF",
+"+	c #838183",
+"@	c #000000",
+"#	c #000083",
+"$	c #008183",
+"%	c #C5C2FF",
+"&	c #C0C0C0",
+"*	c #808000",
+"=	c #FFFF00",
+"-	c #000080",
+";	c #808080",
+">	c #800000",
+",	c #FF0000",
+"  &&@@**&&  ",
+" &@@====**& ",
+"&@==....=.*&",
+"&@=...====*&",
+"@=..-.=-.==*",
+"@=.&;&&;&==*",
+".+@####====*",
+"+$%%+%%=,==*",
+"#.....$>==*&",
+"#.#...$===*&",
+"#.....$=**& ",
+"#...#.$*&&  "};
